project/toam/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ELSEIF

Grammar

Rule 0     S' -> start
Rule 1     start -> bloc
Rule 2     bloc -> bloc statement SEMICOLON
Rule 3     bloc -> statement SEMICOLON
Rule 4     bloc -> bloc SIMPLE_COMMENT
Rule 5     bloc -> SIMPLE_COMMENT
Rule 6     bloc -> bloc MULTI_COMMENT
Rule 7     bloc -> MULTI_COMMENT
Rule 8     statement -> FUNCTION RETURNTYPE NAME LPAREN PARAMS RPAREN LCURLYBRACKET bloc RCURLYBRACKET
Rule 9     statement -> FUNCTION RETURNTYPE NAME LPAREN RPAREN LCURLYBRACKET bloc RCURLYBRACKET
Rule 10    PARAMS -> TYPE NAME
Rule 11    PARAMS -> TYPE NAME COMMA PARAMS
Rule 12    statement -> PRINT LPAREN expression RPAREN
Rule 13    statement -> PRINT LPAREN CHARCHAIN RPAREN
Rule 14    statement -> IF LPAREN expression RPAREN LCURLYBRACKET bloc RCURLYBRACKET
Rule 15    statement -> IF LPAREN expression RPAREN LCURLYBRACKET bloc RCURLYBRACKET ELSE LCURLYBRACKET bloc RCURLYBRACKET
Rule 16    statement -> WHILE LPAREN expression RPAREN LCURLYBRACKET bloc RCURLYBRACKET
Rule 17    statement -> FOR LPAREN statement SEMICOLON expression SEMICOLON statement RPAREN LCURLYBRACKET bloc RCURLYBRACKET
Rule 18    statement -> TOAMSCAN LPAREN NAME RPAREN
Rule 19    statement -> NAME ASSIGN SCAN LPAREN RPAREN
Rule 20    ARRAYELEMENT -> expression
Rule 21    ARRAYELEMENT -> expression COMMA ARRAYELEMENT
Rule 22    statement -> TYPE NAME ASSIGN expression
Rule 23    statement -> TYPEARRAY NAME ASSIGN LBRACKET RBRACKET
Rule 24    statement -> TYPEARRAY NAME ASSIGN LBRACKET ARRAYELEMENT RBRACKET
Rule 25    statement -> NAME ASSIGN expression
Rule 26    statement -> NAME ASSIGN LBRACKET RBRACKET
Rule 27    statement -> NAME ASSIGN LBRACKET ARRAYELEMENT RBRACKET
Rule 28    expression -> expression MINUS expression
Rule 29    expression -> expression DIVIDE expression
Rule 30    expression -> expression PLUS expression
Rule 31    expression -> expression TIMES expression
Rule 32    expression -> LPAREN expression RPAREN
Rule 33    expression -> NUMBER
Rule 34    expression -> BOOLEAN
Rule 35    expression -> NAME
Rule 36    FUNCPARAMS -> expression
Rule 37    FUNCPARAMS -> expression COMMA FUNCPARAMS
Rule 38    expression -> NAME LPAREN RPAREN
Rule 39    expression -> NAME LPAREN FUNCPARAMS RPAREN
Rule 40    statement -> NAME LPAREN RPAREN
Rule 41    statement -> NAME LPAREN FUNCPARAMS RPAREN
Rule 42    TYPE -> INT
Rule 43    TYPE -> FLOAT
Rule 44    TYPE -> CHAR
Rule 45    TYPE -> STRING
Rule 46    TYPE -> BOOL
Rule 47    TYPEARRAY -> TYPE LBRACKET RBRACKET
Rule 48    RETURNTYPE -> TYPE
Rule 49    RETURNTYPE -> VOID
Rule 50    statement -> RETURN expression
Rule 51    statement -> RETURN statement
Rule 52    statement -> RETURN
Rule 53    BOOLEAN -> TRUE
Rule 54    BOOLEAN -> FALSE
Rule 55    expression -> CHARCHAIN
Rule 56    expression -> expression AND expression
Rule 57    expression -> expression OR expression
Rule 58    expression -> expression GREATER expression
Rule 59    expression -> expression LESS expression
Rule 60    expression -> expression EQUALS expression
Rule 61    expression -> expression NOTEQUALS expression
Rule 62    expression -> expression GREATEREQUALS expression
Rule 63    expression -> expression LESSEQUALS expression
Rule 64    statement -> NAME INCREMENT
Rule 65    statement -> NAME DECREMENT
Rule 66    statement -> NAME INCREASE expression
Rule 67    statement -> NAME DECREASE expression

Terminals, with rules where they appear

AND                  : 56
ASSIGN               : 19 22 23 24 25 26 27
BOOL                 : 46
CHAR                 : 44
CHARCHAIN            : 13 55
COMMA                : 11 21 37
DECREASE             : 67
DECREMENT            : 65
DIVIDE               : 29
ELSE                 : 15
ELSEIF               : 
EQUALS               : 60
FALSE                : 54
FLOAT                : 43
FOR                  : 17
FUNCTION             : 8 9
GREATER              : 58
GREATEREQUALS        : 62
IF                   : 14 15
INCREASE             : 66
INCREMENT            : 64
INT                  : 42
LBRACKET             : 23 24 26 27 47
LCURLYBRACKET        : 8 9 14 15 15 16 17
LESS                 : 59
LESSEQUALS           : 63
LPAREN               : 8 9 12 13 14 15 16 17 18 19 32 38 39 40 41
MINUS                : 28
MULTI_COMMENT        : 6 7
NAME                 : 8 9 10 11 18 19 22 23 24 25 26 27 35 38 39 40 41 64 65 66 67
NOTEQUALS            : 61
NUMBER               : 33
OR                   : 57
PLUS                 : 30
PRINT                : 12 13
RBRACKET             : 23 24 26 27 47
RCURLYBRACKET        : 8 9 14 15 15 16 17
RETURN               : 50 51 52
RPAREN               : 8 9 12 13 14 15 16 17 18 19 32 38 39 40 41
SCAN                 : 19
SEMICOLON            : 2 3 17 17
SIMPLE_COMMENT       : 4 5
STRING               : 45
TIMES                : 31
TOAMSCAN             : 18
TRUE                 : 53
VOID                 : 49
WHILE                : 16
error                : 

Nonterminals, with rules where they appear

ARRAYELEMENT         : 21 24 27
BOOLEAN              : 34
FUNCPARAMS           : 37 39 41
PARAMS               : 8 11
RETURNTYPE           : 8 9
TYPE                 : 10 11 22 47 48
TYPEARRAY            : 23 24
bloc                 : 1 2 4 6 8 9 14 15 15 16 17
expression           : 12 14 15 16 17 20 21 22 25 28 28 29 29 30 30 31 31 32 36 37 50 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 63 66 67
start                : 0
statement            : 2 3 17 17 51

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . bloc
    (2) bloc -> . bloc statement SEMICOLON
    (3) bloc -> . statement SEMICOLON
    (4) bloc -> . bloc SIMPLE_COMMENT
    (5) bloc -> . SIMPLE_COMMENT
    (6) bloc -> . bloc MULTI_COMMENT
    (7) bloc -> . MULTI_COMMENT
    (8) statement -> . FUNCTION RETURNTYPE NAME LPAREN PARAMS RPAREN LCURLYBRACKET bloc RCURLYBRACKET
    (9) statement -> . FUNCTION RETURNTYPE NAME LPAREN RPAREN LCURLYBRACKET bloc RCURLYBRACKET
    (12) statement -> . PRINT LPAREN expression RPAREN
    (13) statement -> . PRINT LPAREN CHARCHAIN RPAREN
    (14) statement -> . IF LPAREN expression RPAREN LCURLYBRACKET bloc RCURLYBRACKET
    (15) statement -> . IF LPAREN expression RPAREN LCURLYBRACKET bloc RCURLYBRACKET ELSE LCURLYBRACKET bloc RCURLYBRACKET
    (16) statement -> . WHILE LPAREN expression RPAREN LCURLYBRACKET bloc RCURLYBRACKET
    (17) statement -> . FOR LPAREN statement SEMICOLON expression SEMICOLON statement RPAREN LCURLYBRACKET bloc RCURLYBRACKET
    (18) statement -> . TOAMSCAN LPAREN NAME RPAREN
    (19) statement -> . NAME ASSIGN SCAN LPAREN RPAREN
    (22) statement -> . TYPE NAME ASSIGN expression
    (23) statement -> . TYPEARRAY NAME ASSIGN LBRACKET RBRACKET
    (24) statement -> . TYPEARRAY NAME ASSIGN LBRACKET ARRAYELEMENT RBRACKET
    (25) statement -> . NAME ASSIGN expression
    (26) statement -> . NAME ASSIGN LBRACKET RBRACKET
    (27) statement -> . NAME ASSIGN LBRACKET ARRAYELEMENT RBRACKET
    (40) statement -> . NAME LPAREN RPAREN
    (41) statement -> . NAME LPAREN FUNCPARAMS RPAREN
    (50) statement -> . RETURN expression
    (51) statement -> . RETURN statement
    (52) statement -> . RETURN
    (64) statement -> . NAME INCREMENT
    (65) statement -> . NAME DECREMENT
    (66) statement -> . NAME INCREASE expression
    (67) statement -> . NAME DECREASE expression
    (42) TYPE -> . INT
    (43) TYPE -> . FLOAT
    (44) TYPE -> . CHAR
    (45) TYPE -> . STRING
    (46) TYPE -> . BOOL
    (47) TYPEARRAY -> . TYPE LBRACKET RBRACKET

    SIMPLE_COMMENT  shift and go to state 4
    MULTI_COMMENT   shift and go to state 5
    FUNCTION        shift and go to state 6
    PRINT           shift and go to state 8
    IF              shift and go to state 9
    WHILE           shift and go to state 10
    FOR             shift and go to state 11
    TOAMSCAN        shift and go to state 12
    NAME            shift and go to state 7
    RETURN          shift and go to state 15
    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    CHAR            shift and go to state 18
    STRING          shift and go to state 19
    BOOL            shift and go to state 20

    start                          shift and go to state 1
    bloc                           shift and go to state 2
    statement                      shift and go to state 3
    TYPE                           shift and go to state 13
    TYPEARRAY                      shift and go to state 14

state 1

    (0) S' -> start .



state 2

    (1) start -> bloc .
    (2) bloc -> bloc . statement SEMICOLON
    (4) bloc -> bloc . SIMPLE_COMMENT
    (6) bloc -> bloc . MULTI_COMMENT
    (8) statement -> . FUNCTION RETURNTYPE NAME LPAREN PARAMS RPAREN LCURLYBRACKET bloc RCURLYBRACKET
    (9) statement -> . FUNCTION RETURNTYPE NAME LPAREN RPAREN LCURLYBRACKET bloc RCURLYBRACKET
    (12) statement -> . PRINT LPAREN expression RPAREN
    (13) statement -> . PRINT LPAREN CHARCHAIN RPAREN
    (14) statement -> . IF LPAREN expression RPAREN LCURLYBRACKET bloc RCURLYBRACKET
    (15) statement -> . IF LPAREN expression RPAREN LCURLYBRACKET bloc RCURLYBRACKET ELSE LCURLYBRACKET bloc RCURLYBRACKET
    (16) statement -> . WHILE LPAREN expression RPAREN LCURLYBRACKET bloc RCURLYBRACKET
    (17) statement -> . FOR LPAREN statement SEMICOLON expression SEMICOLON statement RPAREN LCURLYBRACKET bloc RCURLYBRACKET
    (18) statement -> . TOAMSCAN LPAREN NAME RPAREN
    (19) statement -> . NAME ASSIGN SCAN LPAREN RPAREN
    (22) statement -> . TYPE NAME ASSIGN expression
    (23) statement -> . TYPEARRAY NAME ASSIGN LBRACKET RBRACKET
    (24) statement -> . TYPEARRAY NAME ASSIGN LBRACKET ARRAYELEMENT RBRACKET
    (25) statement -> . NAME ASSIGN expression
    (26) statement -> . NAME ASSIGN LBRACKET RBRACKET
    (27) statement -> . NAME ASSIGN LBRACKET ARRAYELEMENT RBRACKET
    (40) statement -> . NAME LPAREN RPAREN
    (41) statement -> . NAME LPAREN FUNCPARAMS RPAREN
    (50) statement -> . RETURN expression
    (51) statement -> . RETURN statement
    (52) statement -> . RETURN
    (64) statement -> . NAME INCREMENT
    (65) statement -> . NAME DECREMENT
    (66) statement -> . NAME INCREASE expression
    (67) statement -> . NAME DECREASE expression
    (42) TYPE -> . INT
    (43) TYPE -> . FLOAT
    (44) TYPE -> . CHAR
    (45) TYPE -> . STRING
    (46) TYPE -> . BOOL
    (47) TYPEARRAY -> . TYPE LBRACKET RBRACKET

    $end            reduce using rule 1 (start -> bloc .)
    SIMPLE_COMMENT  shift and go to state 22
    MULTI_COMMENT   shift and go to state 23
    FUNCTION        shift and go to state 6
    PRINT           shift and go to state 8
    IF              shift and go to state 9
    WHILE           shift and go to state 10
    FOR             shift and go to state 11
    TOAMSCAN        shift and go to state 12
    NAME            shift and go to state 7
    RETURN          shift and go to state 15
    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    CHAR            shift and go to state 18
    STRING          shift and go to state 19
    BOOL            shift and go to state 20

    statement                      shift and go to state 21
    TYPE                           shift and go to state 13
    TYPEARRAY                      shift and go to state 14

state 3

    (3) bloc -> statement . SEMICOLON

    SEMICOLON       shift and go to state 24


state 4

    (5) bloc -> SIMPLE_COMMENT .

    SIMPLE_COMMENT  reduce using rule 5 (bloc -> SIMPLE_COMMENT .)
    MULTI_COMMENT   reduce using rule 5 (bloc -> SIMPLE_COMMENT .)
    FUNCTION        reduce using rule 5 (bloc -> SIMPLE_COMMENT .)
    PRINT           reduce using rule 5 (bloc -> SIMPLE_COMMENT .)
    IF              reduce using rule 5 (bloc -> SIMPLE_COMMENT .)
    WHILE           reduce using rule 5 (bloc -> SIMPLE_COMMENT .)
    FOR             reduce using rule 5 (bloc -> SIMPLE_COMMENT .)
    TOAMSCAN        reduce using rule 5 (bloc -> SIMPLE_COMMENT .)
    NAME            reduce using rule 5 (bloc -> SIMPLE_COMMENT .)
    RETURN          reduce using rule 5 (bloc -> SIMPLE_COMMENT .)
    INT             reduce using rule 5 (bloc -> SIMPLE_COMMENT .)
    FLOAT           reduce using rule 5 (bloc -> SIMPLE_COMMENT .)
    CHAR            reduce using rule 5 (bloc -> SIMPLE_COMMENT .)
    STRING          reduce using rule 5 (bloc -> SIMPLE_COMMENT .)
    BOOL            reduce using rule 5 (bloc -> SIMPLE_COMMENT .)
    $end            reduce using rule 5 (bloc -> SIMPLE_COMMENT .)
    RCURLYBRACKET   reduce using rule 5 (bloc -> SIMPLE_COMMENT .)


state 5

    (7) bloc -> MULTI_COMMENT .

    SIMPLE_COMMENT  reduce using rule 7 (bloc -> MULTI_COMMENT .)
    MULTI_COMMENT   reduce using rule 7 (bloc -> MULTI_COMMENT .)
    FUNCTION        reduce using rule 7 (bloc -> MULTI_COMMENT .)
    PRINT           reduce using rule 7 (bloc -> MULTI_COMMENT .)
    IF              reduce using rule 7 (bloc -> MULTI_COMMENT .)
    WHILE           reduce using rule 7 (bloc -> MULTI_COMMENT .)
    FOR             reduce using rule 7 (bloc -> MULTI_COMMENT .)
    TOAMSCAN        reduce using rule 7 (bloc -> MULTI_COMMENT .)
    NAME            reduce using rule 7 (bloc -> MULTI_COMMENT .)
    RETURN          reduce using rule 7 (bloc -> MULTI_COMMENT .)
    INT             reduce using rule 7 (bloc -> MULTI_COMMENT .)
    FLOAT           reduce using rule 7 (bloc -> MULTI_COMMENT .)
    CHAR            reduce using rule 7 (bloc -> MULTI_COMMENT .)
    STRING          reduce using rule 7 (bloc -> MULTI_COMMENT .)
    BOOL            reduce using rule 7 (bloc -> MULTI_COMMENT .)
    $end            reduce using rule 7 (bloc -> MULTI_COMMENT .)
    RCURLYBRACKET   reduce using rule 7 (bloc -> MULTI_COMMENT .)


state 6

    (8) statement -> FUNCTION . RETURNTYPE NAME LPAREN PARAMS RPAREN LCURLYBRACKET bloc RCURLYBRACKET
    (9) statement -> FUNCTION . RETURNTYPE NAME LPAREN RPAREN LCURLYBRACKET bloc RCURLYBRACKET
    (48) RETURNTYPE -> . TYPE
    (49) RETURNTYPE -> . VOID
    (42) TYPE -> . INT
    (43) TYPE -> . FLOAT
    (44) TYPE -> . CHAR
    (45) TYPE -> . STRING
    (46) TYPE -> . BOOL

    VOID            shift and go to state 27
    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    CHAR            shift and go to state 18
    STRING          shift and go to state 19
    BOOL            shift and go to state 20

    RETURNTYPE                     shift and go to state 25
    TYPE                           shift and go to state 26

state 7

    (19) statement -> NAME . ASSIGN SCAN LPAREN RPAREN
    (25) statement -> NAME . ASSIGN expression
    (26) statement -> NAME . ASSIGN LBRACKET RBRACKET
    (27) statement -> NAME . ASSIGN LBRACKET ARRAYELEMENT RBRACKET
    (40) statement -> NAME . LPAREN RPAREN
    (41) statement -> NAME . LPAREN FUNCPARAMS RPAREN
    (64) statement -> NAME . INCREMENT
    (65) statement -> NAME . DECREMENT
    (66) statement -> NAME . INCREASE expression
    (67) statement -> NAME . DECREASE expression

    ASSIGN          shift and go to state 28
    LPAREN          shift and go to state 29
    INCREMENT       shift and go to state 30
    DECREMENT       shift and go to state 31
    INCREASE        shift and go to state 32
    DECREASE        shift and go to state 33


state 8

    (12) statement -> PRINT . LPAREN expression RPAREN
    (13) statement -> PRINT . LPAREN CHARCHAIN RPAREN

    LPAREN          shift and go to state 34


state 9

    (14) statement -> IF . LPAREN expression RPAREN LCURLYBRACKET bloc RCURLYBRACKET
    (15) statement -> IF . LPAREN expression RPAREN LCURLYBRACKET bloc RCURLYBRACKET ELSE LCURLYBRACKET bloc RCURLYBRACKET

    LPAREN          shift and go to state 35


state 10

    (16) statement -> WHILE . LPAREN expression RPAREN LCURLYBRACKET bloc RCURLYBRACKET

    LPAREN          shift and go to state 36


state 11

    (17) statement -> FOR . LPAREN statement SEMICOLON expression SEMICOLON statement RPAREN LCURLYBRACKET bloc RCURLYBRACKET

    LPAREN          shift and go to state 37


state 12

    (18) statement -> TOAMSCAN . LPAREN NAME RPAREN

    LPAREN          shift and go to state 38


state 13

    (22) statement -> TYPE . NAME ASSIGN expression
    (47) TYPEARRAY -> TYPE . LBRACKET RBRACKET

    NAME            shift and go to state 39
    LBRACKET        shift and go to state 40


state 14

    (23) statement -> TYPEARRAY . NAME ASSIGN LBRACKET RBRACKET
    (24) statement -> TYPEARRAY . NAME ASSIGN LBRACKET ARRAYELEMENT RBRACKET

    NAME            shift and go to state 41


state 15

    (50) statement -> RETURN . expression
    (51) statement -> RETURN . statement
    (52) statement -> RETURN .
    (28) expression -> . expression MINUS expression
    (29) expression -> . expression DIVIDE expression
    (30) expression -> . expression PLUS expression
    (31) expression -> . expression TIMES expression
    (32) expression -> . LPAREN expression RPAREN
    (33) expression -> . NUMBER
    (34) expression -> . BOOLEAN
    (35) expression -> . NAME
    (38) expression -> . NAME LPAREN RPAREN
    (39) expression -> . NAME LPAREN FUNCPARAMS RPAREN
    (55) expression -> . CHARCHAIN
    (56) expression -> . expression AND expression
    (57) expression -> . expression OR expression
    (58) expression -> . expression GREATER expression
    (59) expression -> . expression LESS expression
    (60) expression -> . expression EQUALS expression
    (61) expression -> . expression NOTEQUALS expression
    (62) expression -> . expression GREATEREQUALS expression
    (63) expression -> . expression LESSEQUALS expression
    (8) statement -> . FUNCTION RETURNTYPE NAME LPAREN PARAMS RPAREN LCURLYBRACKET bloc RCURLYBRACKET
    (9) statement -> . FUNCTION RETURNTYPE NAME LPAREN RPAREN LCURLYBRACKET bloc RCURLYBRACKET
    (12) statement -> . PRINT LPAREN expression RPAREN
    (13) statement -> . PRINT LPAREN CHARCHAIN RPAREN
    (14) statement -> . IF LPAREN expression RPAREN LCURLYBRACKET bloc RCURLYBRACKET
    (15) statement -> . IF LPAREN expression RPAREN LCURLYBRACKET bloc RCURLYBRACKET ELSE LCURLYBRACKET bloc RCURLYBRACKET
    (16) statement -> . WHILE LPAREN expression RPAREN LCURLYBRACKET bloc RCURLYBRACKET
    (17) statement -> . FOR LPAREN statement SEMICOLON expression SEMICOLON statement RPAREN LCURLYBRACKET bloc RCURLYBRACKET
    (18) statement -> . TOAMSCAN LPAREN NAME RPAREN
    (19) statement -> . NAME ASSIGN SCAN LPAREN RPAREN
    (22) statement -> . TYPE NAME ASSIGN expression
    (23) statement -> . TYPEARRAY NAME ASSIGN LBRACKET RBRACKET
    (24) statement -> . TYPEARRAY NAME ASSIGN LBRACKET ARRAYELEMENT RBRACKET
    (25) statement -> . NAME ASSIGN expression
    (26) statement -> . NAME ASSIGN LBRACKET RBRACKET
    (27) statement -> . NAME ASSIGN LBRACKET ARRAYELEMENT RBRACKET
    (40) statement -> . NAME LPAREN RPAREN
    (41) statement -> . NAME LPAREN FUNCPARAMS RPAREN
    (50) statement -> . RETURN expression
    (51) statement -> . RETURN statement
    (52) statement -> . RETURN
    (64) statement -> . NAME INCREMENT
    (65) statement -> . NAME DECREMENT
    (66) statement -> . NAME INCREASE expression
    (67) statement -> . NAME DECREASE expression
    (53) BOOLEAN -> . TRUE
    (54) BOOLEAN -> . FALSE
    (42) TYPE -> . INT
    (43) TYPE -> . FLOAT
    (44) TYPE -> . CHAR
    (45) TYPE -> . STRING
    (46) TYPE -> . BOOL
    (47) TYPEARRAY -> . TYPE LBRACKET RBRACKET

    SEMICOLON       reduce using rule 52 (statement -> RETURN .)
    RPAREN          reduce using rule 52 (statement -> RETURN .)
    LPAREN          shift and go to state 44
    NUMBER          shift and go to state 45
    NAME            shift and go to state 47
    CHARCHAIN       shift and go to state 48
    FUNCTION        shift and go to state 6
    PRINT           shift and go to state 8
    IF              shift and go to state 9
    WHILE           shift and go to state 10
    FOR             shift and go to state 11
    TOAMSCAN        shift and go to state 12
    RETURN          shift and go to state 15
    TRUE            shift and go to state 49
    FALSE           shift and go to state 50
    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    CHAR            shift and go to state 18
    STRING          shift and go to state 19
    BOOL            shift and go to state 20

    expression                     shift and go to state 42
    statement                      shift and go to state 43
    BOOLEAN                        shift and go to state 46
    TYPE                           shift and go to state 13
    TYPEARRAY                      shift and go to state 14

state 16

    (42) TYPE -> INT .

    NAME            reduce using rule 42 (TYPE -> INT .)
    LBRACKET        reduce using rule 42 (TYPE -> INT .)


state 17

    (43) TYPE -> FLOAT .

    NAME            reduce using rule 43 (TYPE -> FLOAT .)
    LBRACKET        reduce using rule 43 (TYPE -> FLOAT .)


state 18

    (44) TYPE -> CHAR .

    NAME            reduce using rule 44 (TYPE -> CHAR .)
    LBRACKET        reduce using rule 44 (TYPE -> CHAR .)


state 19

    (45) TYPE -> STRING .

    NAME            reduce using rule 45 (TYPE -> STRING .)
    LBRACKET        reduce using rule 45 (TYPE -> STRING .)


state 20

    (46) TYPE -> BOOL .

    NAME            reduce using rule 46 (TYPE -> BOOL .)
    LBRACKET        reduce using rule 46 (TYPE -> BOOL .)


state 21

    (2) bloc -> bloc statement . SEMICOLON

    SEMICOLON       shift and go to state 51


state 22

    (4) bloc -> bloc SIMPLE_COMMENT .

    SIMPLE_COMMENT  reduce using rule 4 (bloc -> bloc SIMPLE_COMMENT .)
    MULTI_COMMENT   reduce using rule 4 (bloc -> bloc SIMPLE_COMMENT .)
    FUNCTION        reduce using rule 4 (bloc -> bloc SIMPLE_COMMENT .)
    PRINT           reduce using rule 4 (bloc -> bloc SIMPLE_COMMENT .)
    IF              reduce using rule 4 (bloc -> bloc SIMPLE_COMMENT .)
    WHILE           reduce using rule 4 (bloc -> bloc SIMPLE_COMMENT .)
    FOR             reduce using rule 4 (bloc -> bloc SIMPLE_COMMENT .)
    TOAMSCAN        reduce using rule 4 (bloc -> bloc SIMPLE_COMMENT .)
    NAME            reduce using rule 4 (bloc -> bloc SIMPLE_COMMENT .)
    RETURN          reduce using rule 4 (bloc -> bloc SIMPLE_COMMENT .)
    INT             reduce using rule 4 (bloc -> bloc SIMPLE_COMMENT .)
    FLOAT           reduce using rule 4 (bloc -> bloc SIMPLE_COMMENT .)
    CHAR            reduce using rule 4 (bloc -> bloc SIMPLE_COMMENT .)
    STRING          reduce using rule 4 (bloc -> bloc SIMPLE_COMMENT .)
    BOOL            reduce using rule 4 (bloc -> bloc SIMPLE_COMMENT .)
    $end            reduce using rule 4 (bloc -> bloc SIMPLE_COMMENT .)
    RCURLYBRACKET   reduce using rule 4 (bloc -> bloc SIMPLE_COMMENT .)


state 23

    (6) bloc -> bloc MULTI_COMMENT .

    SIMPLE_COMMENT  reduce using rule 6 (bloc -> bloc MULTI_COMMENT .)
    MULTI_COMMENT   reduce using rule 6 (bloc -> bloc MULTI_COMMENT .)
    FUNCTION        reduce using rule 6 (bloc -> bloc MULTI_COMMENT .)
    PRINT           reduce using rule 6 (bloc -> bloc MULTI_COMMENT .)
    IF              reduce using rule 6 (bloc -> bloc MULTI_COMMENT .)
    WHILE           reduce using rule 6 (bloc -> bloc MULTI_COMMENT .)
    FOR             reduce using rule 6 (bloc -> bloc MULTI_COMMENT .)
    TOAMSCAN        reduce using rule 6 (bloc -> bloc MULTI_COMMENT .)
    NAME            reduce using rule 6 (bloc -> bloc MULTI_COMMENT .)
    RETURN          reduce using rule 6 (bloc -> bloc MULTI_COMMENT .)
    INT             reduce using rule 6 (bloc -> bloc MULTI_COMMENT .)
    FLOAT           reduce using rule 6 (bloc -> bloc MULTI_COMMENT .)
    CHAR            reduce using rule 6 (bloc -> bloc MULTI_COMMENT .)
    STRING          reduce using rule 6 (bloc -> bloc MULTI_COMMENT .)
    BOOL            reduce using rule 6 (bloc -> bloc MULTI_COMMENT .)
    $end            reduce using rule 6 (bloc -> bloc MULTI_COMMENT .)
    RCURLYBRACKET   reduce using rule 6 (bloc -> bloc MULTI_COMMENT .)


state 24

    (3) bloc -> statement SEMICOLON .

    SIMPLE_COMMENT  reduce using rule 3 (bloc -> statement SEMICOLON .)
    MULTI_COMMENT   reduce using rule 3 (bloc -> statement SEMICOLON .)
    FUNCTION        reduce using rule 3 (bloc -> statement SEMICOLON .)
    PRINT           reduce using rule 3 (bloc -> statement SEMICOLON .)
    IF              reduce using rule 3 (bloc -> statement SEMICOLON .)
    WHILE           reduce using rule 3 (bloc -> statement SEMICOLON .)
    FOR             reduce using rule 3 (bloc -> statement SEMICOLON .)
    TOAMSCAN        reduce using rule 3 (bloc -> statement SEMICOLON .)
    NAME            reduce using rule 3 (bloc -> statement SEMICOLON .)
    RETURN          reduce using rule 3 (bloc -> statement SEMICOLON .)
    INT             reduce using rule 3 (bloc -> statement SEMICOLON .)
    FLOAT           reduce using rule 3 (bloc -> statement SEMICOLON .)
    CHAR            reduce using rule 3 (bloc -> statement SEMICOLON .)
    STRING          reduce using rule 3 (bloc -> statement SEMICOLON .)
    BOOL            reduce using rule 3 (bloc -> statement SEMICOLON .)
    $end            reduce using rule 3 (bloc -> statement SEMICOLON .)
    RCURLYBRACKET   reduce using rule 3 (bloc -> statement SEMICOLON .)


state 25

    (8) statement -> FUNCTION RETURNTYPE . NAME LPAREN PARAMS RPAREN LCURLYBRACKET bloc RCURLYBRACKET
    (9) statement -> FUNCTION RETURNTYPE . NAME LPAREN RPAREN LCURLYBRACKET bloc RCURLYBRACKET

    NAME            shift and go to state 52


state 26

    (48) RETURNTYPE -> TYPE .

    NAME            reduce using rule 48 (RETURNTYPE -> TYPE .)


state 27

    (49) RETURNTYPE -> VOID .

    NAME            reduce using rule 49 (RETURNTYPE -> VOID .)


state 28

    (19) statement -> NAME ASSIGN . SCAN LPAREN RPAREN
    (25) statement -> NAME ASSIGN . expression
    (26) statement -> NAME ASSIGN . LBRACKET RBRACKET
    (27) statement -> NAME ASSIGN . LBRACKET ARRAYELEMENT RBRACKET
    (28) expression -> . expression MINUS expression
    (29) expression -> . expression DIVIDE expression
    (30) expression -> . expression PLUS expression
    (31) expression -> . expression TIMES expression
    (32) expression -> . LPAREN expression RPAREN
    (33) expression -> . NUMBER
    (34) expression -> . BOOLEAN
    (35) expression -> . NAME
    (38) expression -> . NAME LPAREN RPAREN
    (39) expression -> . NAME LPAREN FUNCPARAMS RPAREN
    (55) expression -> . CHARCHAIN
    (56) expression -> . expression AND expression
    (57) expression -> . expression OR expression
    (58) expression -> . expression GREATER expression
    (59) expression -> . expression LESS expression
    (60) expression -> . expression EQUALS expression
    (61) expression -> . expression NOTEQUALS expression
    (62) expression -> . expression GREATEREQUALS expression
    (63) expression -> . expression LESSEQUALS expression
    (53) BOOLEAN -> . TRUE
    (54) BOOLEAN -> . FALSE

    SCAN            shift and go to state 54
    LBRACKET        shift and go to state 56
    LPAREN          shift and go to state 44
    NUMBER          shift and go to state 45
    NAME            shift and go to state 53
    CHARCHAIN       shift and go to state 48
    TRUE            shift and go to state 49
    FALSE           shift and go to state 50

    expression                     shift and go to state 55
    BOOLEAN                        shift and go to state 46

state 29

    (40) statement -> NAME LPAREN . RPAREN
    (41) statement -> NAME LPAREN . FUNCPARAMS RPAREN
    (36) FUNCPARAMS -> . expression
    (37) FUNCPARAMS -> . expression COMMA FUNCPARAMS
    (28) expression -> . expression MINUS expression
    (29) expression -> . expression DIVIDE expression
    (30) expression -> . expression PLUS expression
    (31) expression -> . expression TIMES expression
    (32) expression -> . LPAREN expression RPAREN
    (33) expression -> . NUMBER
    (34) expression -> . BOOLEAN
    (35) expression -> . NAME
    (38) expression -> . NAME LPAREN RPAREN
    (39) expression -> . NAME LPAREN FUNCPARAMS RPAREN
    (55) expression -> . CHARCHAIN
    (56) expression -> . expression AND expression
    (57) expression -> . expression OR expression
    (58) expression -> . expression GREATER expression
    (59) expression -> . expression LESS expression
    (60) expression -> . expression EQUALS expression
    (61) expression -> . expression NOTEQUALS expression
    (62) expression -> . expression GREATEREQUALS expression
    (63) expression -> . expression LESSEQUALS expression
    (53) BOOLEAN -> . TRUE
    (54) BOOLEAN -> . FALSE

    RPAREN          shift and go to state 57
    LPAREN          shift and go to state 44
    NUMBER          shift and go to state 45
    NAME            shift and go to state 53
    CHARCHAIN       shift and go to state 48
    TRUE            shift and go to state 49
    FALSE           shift and go to state 50

    FUNCPARAMS                     shift and go to state 58
    expression                     shift and go to state 59
    BOOLEAN                        shift and go to state 46

state 30

    (64) statement -> NAME INCREMENT .

    SEMICOLON       reduce using rule 64 (statement -> NAME INCREMENT .)
    RPAREN          reduce using rule 64 (statement -> NAME INCREMENT .)


state 31

    (65) statement -> NAME DECREMENT .

    SEMICOLON       reduce using rule 65 (statement -> NAME DECREMENT .)
    RPAREN          reduce using rule 65 (statement -> NAME DECREMENT .)


state 32

    (66) statement -> NAME INCREASE . expression
    (28) expression -> . expression MINUS expression
    (29) expression -> . expression DIVIDE expression
    (30) expression -> . expression PLUS expression
    (31) expression -> . expression TIMES expression
    (32) expression -> . LPAREN expression RPAREN
    (33) expression -> . NUMBER
    (34) expression -> . BOOLEAN
    (35) expression -> . NAME
    (38) expression -> . NAME LPAREN RPAREN
    (39) expression -> . NAME LPAREN FUNCPARAMS RPAREN
    (55) expression -> . CHARCHAIN
    (56) expression -> . expression AND expression
    (57) expression -> . expression OR expression
    (58) expression -> . expression GREATER expression
    (59) expression -> . expression LESS expression
    (60) expression -> . expression EQUALS expression
    (61) expression -> . expression NOTEQUALS expression
    (62) expression -> . expression GREATEREQUALS expression
    (63) expression -> . expression LESSEQUALS expression
    (53) BOOLEAN -> . TRUE
    (54) BOOLEAN -> . FALSE

    LPAREN          shift and go to state 44
    NUMBER          shift and go to state 45
    NAME            shift and go to state 53
    CHARCHAIN       shift and go to state 48
    TRUE            shift and go to state 49
    FALSE           shift and go to state 50

    expression                     shift and go to state 60
    BOOLEAN                        shift and go to state 46

state 33
